Fixed Gap classes. Added FlexBox helpers.

--- a/scss/fgs_auto_layout.scss
+++ b/scss/fgs_auto_layout.scss
@@ -1,7 +1,18 @@
 /* FigStrap Auto Layout */
 
 .fgs-al {
+  display: flex;
 
+  /* FigStrap Auto Layout Vertical */
+  &.fgs-al-v {
+    flex-direction: column;
+  }
+
+  /* FigStrap Auto Layout Horizontal */
+  &.fgs-al-h {
+    flex-direction: row;
+  }
+  
   /* FigStrap Auto layout padding */
   &.fgs-al-p-10 {
     padding: 10px;
@@ -15,122 +26,77 @@
     padding: 60px;
   }
 
-  /* FigStrap Auto Layout Vertical */
-  &.fgs-al-v {
-    &.fgs-al-g-6 {
-      > .fgs-ali {
-        margin: 6px 0;
-      }
-    }
-
-    &.fgs-al-g-10 {
-      > .fgs-ali {
-        margin: 10px 0;
-      }
-    }
-
-    /* FigStrap Auto layout Gap (margin) */
-    &.fgs-al-g-16 {
-      > .fgs-ali {
-        margin: 16px 0;
-      }
-    }
-    
-    &.fgs-al-g-20 {
-      > .fgs-ali {
-        margin: 20px 0;
-      }
-    }
-
-    &.fgs-al-g-30 {
-      > .fgs-ali {
-        margin: 40px 0;
-      }
-    }
-
-    &.fgs-al-g-40 {
-      > .fgs-ali {
-        margin: 40px 0;
-      }
-    }
-
-    &.fgs-al-g-60 {
-      > .fgs-ali {
-        margin: 60px 0;
-      }
-    }
-
-    .fgs-ali:first-child {
-      margin-top: 0 !important;
-    }
-
-    .fgs-ali:last-child {
-      margin-bottom: 0 !important;
-    }
+  /* FigStrap Auto layout gap */
+  &.fgs-al-g-6 {
+    gap: 6px;
   }
 
-  /* FigStrap Auto Layout Horizontal */
-  &.fgs-al-h {
-    display: flex;
+  &.fgs-al-g-10 {
+    gap: 10px;
+  }
 
-    &.fgs-al-justify-content-space-between {
-      justify-content: space-between;
-    }
-
-    &.fgs-al-align-center {
-      align-items: center;
-    }
-
-    /* FigStrap Auto layout Gap (margin) */
-    &.fgs-al-g-6 {
-      > .fgs-ali {
-        margin: 0 6px;
-      }
-    }
-
-    &.fgs-al-g-10 {
-      > .fgs-ali {
-        margin: 0 10px;
-      }
-    }
-
-    &.fgs-al-g-16 {
-      > .fgs-ali {
-        margin: 0px 16px;
-      }
-    }
-    
-    &.fgs-al-g-20 {
-      > .fgs-ali {
-        margin: 0 20px;
-      }
-    }
-
-    &.fgs-al-g-30 {
-      > .fgs-ali {
-        margin: 0 30px;
-      }
-    }
-
-    &.fgs-al-g-40 {
-      > .fgs-ali {
-        margin: 0 40px;
-      }
-    }
-
-    &.fgs-al-g-60 {
-      > .fgs-ali {
-        margin: 0 40px;
-      }
-    }
-
-    .fgs-ali:first-child {
-      margin-left: 0 !important;
-    }
-
-    .fgs-ali:last-child {
-      margin-right: 0 !important;
-    }
+  &.fgs-al-g-16 {
+    gap: 16px;
+  }
   
+  &.fgs-al-g-20 {
+    gap: 20px;
+  }
+
+  &.fgs-al-g-30 {
+    gap: 30px;
+  }
+
+  &.fgs-al-g-40 {
+    gap: 40px;
+  }
+
+  &.fgs-al-g-60 {
+    gap: 60px;
+  }
+
+  /* FigStrap FlexBox Helpers */
+  &.fgs-al-justify-content-flex-start {
+    justify-content: flex-start;
+  }
+
+  &.fgs-al-justify-content-flex-end {
+    justify-content: flex-end;
+  }
+
+  &.fgs-al-justify-content-center {
+    justify-content: center;
+  }
+  
+  &.fgs-al-justify-content-space-between {
+    justify-content: space-between;
+  }
+  
+  &.fgs-al-justify-content-space-around {
+    justify-content: space-around;
+  }
+
+  &.fgs-al-justify-content-space-evenly {
+    justify-content: space-evenly
+  }
+
+  &.fgs-al-align-items-flex-start {
+    align-items: flex-start;
+  }
+
+  &.fgs-al-align-items-flex-end {
+    align-items: flex-end;
+  }
+
+  &.fgs-al-align-items-center {
+    align-items: center;
+  }
+
+  &.fgs-al-align-items-stretch {
+    align-items: stretch;
+  }
+
+  &.fgs-al-align-items-baseline {
+    align-items: baseline;
   }
 }
